--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         </div>
         <h1 class="welcome">Meet the Leadership Team</h1>
         <div class="card-grid">
-          <div class="card">
+          <!-- <div class="card">
             <h1 class="card-title">Ari</h1>
             <p>Hello, my name is Arielle, and I am 15 years old! I’m pretty new at coding right now, but I love it all
               the same! I also enjoy math, science, Japanese, Russian, reading, writing, and talking to the awesome
@@ -92,8 +92,8 @@
               <br /><br /><a href="#" class="fa fa-envelope email" data-name="Ari"></a><a href="#"
                 class="fa fa-phone phone" data-name="Ari"></a>
             </p>
-          </div>
-          <div class="card">
+          </div> -->
+          <!-- <div class="card">
             <h1 class="card-title">Sophia</h1>
             <p>Hello, I am Sophia! I haven’t been coding for very long, but the Memphis Hack Club has made it a very fun
               experience! I love animals, in fact, I love them so much that I own a pet Madagascar Hissing Cockroach
@@ -106,8 +106,8 @@
               <br /><br /><a href="#" class="fa fa-envelope email" data-name="Sophia"></a><a href="#"
                 class="fa fa-phone phone" data-name="Sophia"></a>
             </p>
-          </div>
-          <div class="card">
+          </div> -->
+          <!-- <div class="card">
             <h1 class="card-title">John</h1>
             <p>Hello, my name is John, and I’m 15. Besides programming with fellow Memphis HackClubbers, I also enjoy
               playing video games, especially Minecraft and Nintendo games, collecting Lego, playing soccer and watching
@@ -121,8 +121,8 @@
               <br /><br /><a href="#" class="fa fa-envelope email" data-name="John"></a><a href="#"
                 class="fa fa-phone phone" data-name="John"></a>
             </p>
-          </div>
-          <div class="card">
+          </div> -->
+          <!-- <div class="card">
             <h1 class="card-title">Micah</h1>
             <p>Hi, I'm Micah! I'm a graphic designer and web developer who's been coding for nearly eight years now! I
               started programming on Scratch in 2014 and now I spend most of my time building stuff in Vue 3, Ionic,
@@ -134,9 +134,16 @@
               <br /><br /><a href="#" class="fa fa-envelope email" data-name="Micah"></a><a href="#"
                 class="fa fa-phone phone" data-name="Micah"></a>
             </p>
-          </div>
-
+          </div> -->
           <div class="card">
+            <h1 class="card-title">Mason</h1>
+            <p>Hello, my name is Mason, I'm 15 years old, I'm teaching myself C# and unity game development, and love to play video games (you can find me at gamenights (any day past 7 CST))! I've been apart of Hackclub for just over 4 years, and joined the leadership team in September of 2025, I can't wait to help shape this club into something great!</p>
+          </div>
+          <div class="card">
+            <h1 class="card-title">Elijah</h1>
+            <p>TBD</p>
+          </div>
+          <!-- <div class="card">
             <h1 class="card-title">Lilly</h1>
             <p>Hello, I'm Lilly! I've been coding here and there for about 2 years now and am excited to learn and grow.
               I code websites in HTML and Roblox games in Lua. Other than coding I enjoy video design, theater, and
@@ -144,7 +151,7 @@
               and I've made great friends in the process.
               <br>lillykumpe@memphishack.com<br /><br />
             </p>
-          </div>
+          </div> -->
           <div class="card">
             <h1 class="card-title">THE CLUB</h1>
             <p>Hello my name is <b>THE CLUB</b>, some know me as <i>THE CLUB</i> and others Memphis Hack Club. That
