--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,8 @@
         <div class="card-grid">
           <div class="card">
             <h1 class="card-title">Alex</h1>
-            <p>Hi, I'm Alex. I've been programming for about 5 years and my main interests are in cybersecurity,
-              programming, and physics. Outside of the more technical realm I enjoy playing tennis and hanging out with
-              friends. As of August 2023, I've been in Hackclub for around a year and a half and I'm very grateful for
-              the opportunities it's provided me with.
+            <p>Hey, my name is Alex. I am currently a high school senior, and have been programming for roughly eight years. My main interests lie in Artificial Intelligence and Cybersecurity, though I have been involved in 3D printing and robotics. Outside of the technical realm, I enjoy playing tennis and drinking coffee (lots of coffee). I joined Hackclub in the Summer of '22 and have been leading for almost a year now. If you have any questions about the club or just want to know more, don't hesitate to reach out!</p>
               <br>alexbarthel@memphishack.com<br /><br />
-            </p>
           </div>
         </div>
         <h1 class="welcome">Former Leaders</h1>
@@ -141,7 +137,7 @@
           </div>
           <div class="card">
             <h1 class="card-title">Elijah</h1>
-            <p>TBD</p>
+            <p>Hi, I’m Elijah. I serve on the leadership team, where I focus on coordination, efficiency, and guiding our group toward successful project outcomes. I’m committed to maintaining high standards, communicating clearly, and stepping up whenever something needs to get done. I prioritize structure, consistency, and supporting my team so we can work smoothly and effectively together.</p>
           </div>
           <!-- <div class="card">
             <h1 class="card-title">Lilly</h1>
