--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
           </div>
         </div>
         <h1 class="welcome">Former Leaders</h1>
-        <div>
+        <div class="card-grid">
           <div class="card">
             <h1 class="card-title">Blake</h1>
             <p>Hello, my name is Blake! I have been programing 7 years and love it even more than when I started. I like
